--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -14,7 +13,7 @@ minecraft {
 }
 
 compileJava {
-    options.compilerArgs = ["--release", "8" ]
+    //options.compilerArgs = ["--release", "8" ]
 }
 
 repositories {
@@ -25,11 +24,11 @@ dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:1.14.4"
 	mappings "net.fabricmc:yarn:1.14.4+build.15"
-	modCompile "net.fabricmc:fabric-loader:0.6.3+build.167"
+	modCompile "net.fabricmc:fabric-loader:0.7.2+build.174"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modCompile "net.fabricmc.fabric-api:fabric-api:0.4.1+build.245-1.14"
-    annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.2.0'
+    //annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.2.0'
 }
 
 processResources {
