--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,14 @@ org.gradle.jvmargs=-Xmx1G
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.14.4
 	yarn_mappings=1.14.4+build.15
-	loader_version=0.6.3+build.167
+	loader_version=0.7.0+build.171
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = net.fabricmc
+	maven_group = net.forestbat
 	archives_base_name = eventlib
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	# currently not on the main fabric site, check on the maven: 
+                #https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.4.1+build.245-1.14
