--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,10 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        maven {
+            name = "fabric"
+            url = "http://lss233.littleservice.cn/repositories/minecraft"
+        }
         gradlePluginPortal()
     }
 }
